--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@900&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     
     <!--CSS-->
-    <link rel="stylesheet" href="../Casa Verde/CSS/base/base.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/chamada.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/como-conseguir.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/ofertas.css">
+    <link rel="stylesheet" href="CSS/base/base.css">
+    <link rel="stylesheet" href="CSS/chamada.css">
+    <link rel="stylesheet" href="CSS/como-conseguir.css">
+    <link rel="stylesheet" href="CSS/ofertas.css">
 
     <!--Componentes-->
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/cabecalho.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/botoes.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/input.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/rodape.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/card.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/item.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/produtos.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/video.css">
+    <link rel="stylesheet" href="CSS/componentes/cabecalho.css">
+    <link rel="stylesheet" href="CSS/componentes/botoes.css">
+    <link rel="stylesheet" href="CSS/componentes/input.css">
+    <link rel="stylesheet" href="CSS/componentes/rodape.css">
+    <link rel="stylesheet" href="CSS/componentes/card.css">
+    <link rel="stylesheet" href="CSS/componentes/item.css">
+    <link rel="stylesheet" href="CSS/componentes/produtos.css">
+    <link rel="stylesheet" href="CSS/componentes/video.css">
 
 </head>
 <body>
