--- a/pagamento.html
+++ b/pagamento.html
@@ -14,16 +14,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@900&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     
     <!--CSS-->
-    <link rel="stylesheet" href="../Casa Verde/CSS/base/base.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/como-conseguir.css"> 
-    <link rel="stylesheet" href="../Casa Verde/CSS/pagamento.css">
+    <link rel="stylesheet" href="CSS/base/base.css">
+    <link rel="stylesheet" href="CSS/como-conseguir.css"> 
+    <link rel="stylesheet" href="CSS/pagamento.css">
 
 
     <!--Componentes-->
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/cabecalho.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/botoes.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/rodape.css">
-    <link rel="stylesheet" href="../Casa Verde/CSS/componentes/card.css">
+    <link rel="stylesheet" href="CSS/componentes/cabecalho.css">
+    <link rel="stylesheet" href="CSS/componentes/botoes.css">
+    <link rel="stylesheet" href="CSS/componentes/rodape.css">
+    <link rel="stylesheet" href="CSS/componentes/card.css">
+
 
     
 
